--- a/style.css
+++ b/style.css
@@ -5,3 +5,6 @@ Author URI:	https://seewang.me
 Template:	twentyfifteen
 Lincense:	GNU General Public License v2 or later
 */
+.entry-content p{
+  text-align: justify;
+}
