add Weibo icon to social links menu

--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 /*
-Theme Name:	Twenty Fifteen Mod
-Author:		CyanWave
-Author URI:	https://seewang.me
-Template:	twentyfifteen
-Lincense:	GNU General Public License v2 or later
+Theme Name: Twenty Fifteen Mod
+Author:     CyanWave
+Author URI: https://seewang.me
+Template:   twentyfifteen
+Lincense:   GNU General Public License v2 or later
 */
-.entry-content p{
-  text-align: justify;
+.entry-content p {
+    text-align: justify;
+}
+
+.social-navigation a[href*="weibo.com"]:before {
+    font-family: "FontAwesome";
+
+    content: "\f18a";
 }
