--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ Lincense:   GNU General Public License v2 or later
 }
 
 .widget_archive select {
-  padding: 0.5em;
-  width: 100%;
+    padding: .5em;
+    width: 100%;
+}
+
+.prettyprint ol.linenums > li {
+    list-style-type: decimal;
 }
