--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Twenty Fifteen Mod
+Theme Name: Twenty Fifteen One
 Author:     CyanWave
 Author URI: https://seewang.me
 Template:   twentyfifteen
