doesn't need for linkedin actually
This partly reverts commit 8d951f2f387e8ca092c5168050922dfc39df6abb.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,3 +1,4 @@
+
 /*!
  * Botstrap v3.3.4 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
@@ -57,7 +58,7 @@ hr {
   overflow: visible;
   clip: auto;
 }
-[role='button'] {
+[role="button"] {
   cursor: pointer;
 }
 .fade {
@@ -87,17 +88,17 @@ tbody.collapse.in {
   overflow: hidden;
   -webkit-transition-property: height, visibility;
   -o-transition-property: height, visibility;
-  transition-property: height, visibility;
+     transition-property: height, visibility;
   -webkit-transition-duration: 0.35s;
   -o-transition-duration: 0.35s;
-  transition-duration: 0.35s;
+     transition-duration: 0.35s;
   -webkit-transition-timing-function: ease;
   -o-transition-timing-function: ease;
-  transition-timing-function: ease;
+     transition-timing-function: ease;
 }
 .clearfix:before,
 .clearfix:after {
-  content: ' ';
+  content: " ";
   display: table;
 }
 .clearfix:after {
