--- a/style.css
+++ b/style.css
@@ -6,24 +6,21 @@ Template:   twentyfifteen
 Lincense:   GNU General Public License v2 or later
 */
 .entry-content p {
-  text-align: justify;
+    text-align: justify;
 }
 
-.social-navigation a[href*='weibo.com']:before {
-  font-family: 'FontAwesome';
-  content: '\f18a';
-}
+.social-navigation a[href*="weibo.com"]:before {
+    font-family: "FontAwesome";
 
-.social-navigation a[href*='linkedin.com']:before {
-  font-family: 'FontAwesome';
-  content: '\f0e1';
+    content: "\f18a";
 }
 
 .widget_archive select {
-  padding: 0.5em;
-  width: 100%;
+    padding: .5em;
+    width: 100%;
 }
 
+
 body.tag {
-  color: #000;
+    color: #000;
 }
