--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,12 +1,12 @@
 
 /*!
- * Botstrap v3.3.4 (http://getbootstrap.com)
+ * Bootstrap v3.3.4 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
 /*
- * only inlcuded js component part
+ * only includes js component part
  */
 
 .img-responsive {
