--- a/style.css
+++ b/style.css
@@ -24,8 +24,14 @@ Lincense:   GNU General Public License v2 or later
     border-width: 0 0 1px 0;
 }
 
-body.tag {
+#colophon .site-info {
+    font-size: 1.4rem;
+    text-align: center;
+}
+
+#colophon .site-info a{
     color: #000;
+    text-decoration: underline;
 }
 
 /**
